force-app/main/default/objects/Outlet__c/fields/No_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employee__c</fullName>
    <label>No. of Employee</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>