force-app/main/default/objects/Outlet__c/fields/Registration_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Extension_Date__c</fullName>
    <formula>Date_and_Time__c + 365</formula>
    <label>Registration Extension Date</label>
    <type>DateTime</type>
</CustomField>