force-app/main/default/objects/Outlet__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <formula>IF( No_of_Employee__c &lt;50, &quot;Small Outlet&quot;,  
IF( No_of_Employee__c &gt;49  &amp;&amp;  No_of_Employee__c &lt;75, &quot;Medium Outlet&quot;, &quot;Large Outlet&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size</label>
    <type>Text</type>
</CustomField>