force-app/main/default/objects/Outlet__c/validationRules/Date_time_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_time_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Date_and_Time__c &gt;  NOW()</errorConditionFormula>
    <errorMessage>DateTime should be created before the current Time</errorMessage>
</ValidationRule>