force-app/main/default/objects/Outlet__c/validationRules/employee_no_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>employee_no_rule</fullName>
    <active>true</active>
    <errorConditionFormula>No_of_Employee__c &gt; 100</errorConditionFormula>
    <errorMessage>Number of Employee can not be more than 100</errorMessage>
</ValidationRule>